2005-05-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/encoders.xml:
	* flumotion/component/encoders/theora.py:
	  apply patch for theora advanced settings.  Closes #201.

2005-05-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/producers/audiotest/audiotest.py:
	* flumotion/component/producers/audiotest/audiotest.xml:
	  make audiotest component respect sample rate setting
	  fixes #210

2005-05-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/consumers/httpstreamer/http.py:
	  check user_limit since that's what it's called now
	* flumotion/component/consumers/httpstreamer/http.xml:
	  add user_limit and bandwidth_limit
	* flumotion/component/consumers/httpstreamer/resources.py:
	  rename setMaxClients to setUserLimit

2005-05-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/encoders.xml:
	* flumotion/wizard/steps.py:
	  treat vorbis encoding quality as a float (0.0 - 1.0)
	  Fixes #212

2005-05-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	patch by: Zaheer Abbas Merali <zaheermerali at gmail dot com>

	* configure.ac:
	* flumotion/admin/gtk/client.py:
	* flumotion/extern/Makefile.am:
	* flumotion/extern/pytrayicon/__init__.py:
	* flumotion/ui/Makefile.am:
	* flumotion/ui/trayicon.py:
	  add the tray icon.  Make sure it still works if the trayicon
	  is not compiled.  Closes #231.

2005-05-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/test_common.py:
	  remove double test that causes spurious problems

2005-05-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	patch by: Zaheer Abbas Merali <zaheermerali at gmail dot com>

	* configure.ac:
	* flumotion/Makefile.am:
	* flumotion/extern/Makefile.am:
	* flumotion/extern/__init__.py:
	* flumotion/extern/pytrayicon/Makefile.am:
	* flumotion/extern/pytrayicon/__init__.py:
	* flumotion/extern/pytrayicon/eggtrayicon.c: